Isolate the Ceph storage and storage_mgmt nets
This patch updates the Ceph configuration for the puppet
implementation so that it isolates the Ceph traffic
for the public and cluster interfaces. By default public traffic
runs on the "storage" network and the cluster traffic runs on the
"storage mgmt" network.

If network isolation is not enabled then the default
ctlplane address's will be used for both the public and
cluster interfaces.

Change-Id: I791244d72c8f42142d9de99e0cf0acdca19e62b0

--- a/ceph-storage.yaml
+++ b/ceph-storage.yaml
@@ -28,6 +28,11 @@ parameters:
     default: ''
     description: The list of ip/names to use as Ceph monitors
     type: json
+  ServiceNetMap:
+    default: {}
+    description: Mapping of service_name -> network name. Typically set
+                 via parameter_defaults in the resource registry.
+    type: json
 
 resources:
   CephStorage:
