--- a/network/config/single-nic-vlans/cinder-storage.yaml
+++ b/network/config/single-nic-vlans/cinder-storage.yaml
@@ -36,7 +36,7 @@ resources:
           network_config:
             -
               type: ovs_bridge
-              name: {get_input: bridge_name}
+              name: br-storage
               use_dhcp: true
               members:
                 -
@@ -47,21 +47,18 @@ resources:
                   primary: true
                 -
                   type: vlan
-                  device: bond1
                   vlan_id: 20
                   addresses:
                   -
                     ip_netmask: {get_param: InternalApiIpSubnet}
                 -
                   type: vlan
-                  device: bond1
                   vlan_id: 30
                   addresses:
                   -
                     ip_netmask: {get_param: StorageIpSubnet}
                 -
                   type: vlan
-                  device: bond1
                   vlan_id: 40
                   addresses:
                   -
