--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -88,6 +88,8 @@ pacemaker::corosync::manage_fw: false
 
 # horizon
 horizon::allowed_hosts: '*'
+horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
+
 
 mysql::server::manage_config_file: true
 
