Add BondInterfaceOvsOptions parameter
This patch adds a new BondInterfaceOvsOptions to the
bond-with-vlans network config templates. This can
be used to configure things like LACP or the bonding mode
via a nested stack heat parameter.

The patch also removes the hard coded ovs_options relating
to both bond-with-vlans and single-nic-with-vlans configurations
which do not actually require this setting to be hard coded
because by default OVS trunks vlan ports automatically.

Change-Id: I3effbccba8ed7ed28d6ba715e5709275d4e7f984

--- a/network/config/bond-with-vlans/ceph-storage.yaml
+++ b/network/config/bond-with-vlans/ceph-storage.yaml
@@ -25,6 +25,11 @@ parameters:
     default: ''
     description: IP address/subnet on the tenant network
     type: string
+  BondInterfaceOvsOptions:
+    default: ''
+    description: The ovs_options string for the bond interface. Set things like
+                 lacp=active and/or bond_mode=balance-slb using this option.
+    type: string
 
 resources:
   OsNetConfigImpl:
@@ -51,7 +56,7 @@ resources:
                 -
                   type: ovs_bond
                   name: bond1
-                  ovs_options: vlan_mode=trunk trunks=10,20,30,40,50
+                  ovs_options: {get_param: BondInterfaceOvsOptions}
                   members:
                     -
                       type: interface
