--- a/network/config/bond-with-vlans/cinder-storage.yaml
+++ b/network/config/bond-with-vlans/cinder-storage.yaml
@@ -25,6 +25,11 @@ parameters:
     default: ''
     description: IP address/subnet on the tenant network
     type: string
+  BondInterfaceOvsOptions:
+    default: ''
+    description: The ovs_options string for the bond interface. Set things like
+                 lacp=active and/or bond_mode=balance-slb using this option.
+    type: string
 
 resources:
   OsNetConfigImpl:
@@ -51,7 +56,7 @@ resources:
                 -
                   type: ovs_bond
                   name: bond1
-                  ovs_options: vlan_mode=trunk trunks=10,20,30,40,50
+                  ovs_options: {get_param: BondInterfaceOvsOptions}
                   members:
                     -
                       type: interface
