Configurable vlan_id's for isolated networks
This patch adds parameters to configure the various
vlan IDs to all of the bond-with-vlans and single-nic-vlans
network config templates.

Change-Id: Ia6196735927777b73879e8086568f8a435597c6c

--- a/network/config/bond-with-vlans/ceph-storage.yaml
+++ b/network/config/bond-with-vlans/ceph-storage.yaml
@@ -30,6 +30,15 @@ parameters:
     description: The ovs_options string for the bond interface. Set things like
                  lacp=active and/or bond_mode=balance-slb using this option.
     type: string
+  StorageNetworkVlanID:
+    default: 30
+    description: Vlan ID for the storage network traffic.
+    type: number
+  StorageMgmtNetworkVlanID:
+    default: 40
+    description: Vlan ID for the storage mgmt network traffic.
+    type: number
+
 
 resources:
   OsNetConfigImpl:
@@ -68,14 +77,14 @@ resources:
                 -
                   type: vlan
                   device: bond1
-                  vlan_id: 30
+                  vlan_id: {get_param: StorageNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageIpSubnet}
                 -
                   type: vlan
                   device: bond1
-                  vlan_id: 40
+                  vlan_id: {get_param: StorageMgmtNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageMgmtIpSubnet}
