--- a/network/config/bond-with-vlans/compute.yaml
+++ b/network/config/bond-with-vlans/compute.yaml
@@ -30,6 +30,18 @@ parameters:
     description: The ovs_options string for the bond interface. Set things like
                  lacp=active and/or bond_mode=balance-slb using this option.
     type: string
+  InternalApiNetworkVlanID:
+    default: 20
+    description: Vlan ID for the internal_api network traffic.
+    type: number
+  StorageNetworkVlanID:
+    default: 30
+    description: Vlan ID for the storage network traffic.
+    type: number
+  TenantNetworkVlanID:
+    default: 50
+    description: Vlan ID for the tenant network traffic.
+    type: number
 
 resources:
   OsNetConfigImpl:
@@ -68,21 +80,21 @@ resources:
                 -
                   type: vlan
                   device: bond1
-                  vlan_id: 20
+                  vlan_id: {get_param: InternalApiNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: InternalApiIpSubnet}
                 -
                   type: vlan
                   device: bond1
-                  vlan_id: 30
+                  vlan_id: {get_param: StorageNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageIpSubnet}
                 -
                   type: vlan
                   device: bond1
-                  vlan_id: 50
+                  vlan_id: {get_param: TenantNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: TenantIpSubnet}
