--- a/network/config/single-nic-vlans/ceph-storage.yaml
+++ b/network/config/single-nic-vlans/ceph-storage.yaml
@@ -25,6 +25,14 @@ parameters:
     default: ''
     description: IP address/subnet on the tenant network
     type: string
+  StorageNetworkVlanID:
+    default: 30
+    description: Vlan ID for the storage network traffic.
+    type: number
+  StorageMgmtNetworkVlanID:
+    default: 40
+    description: Vlan ID for the storage mgmt network traffic.
+    type: number
 
 resources:
   OsNetConfigImpl:
@@ -46,13 +54,13 @@ resources:
                   primary: true
                 -
                   type: vlan
-                  vlan_id: 30
+                  vlan_id: {get_param: StorageNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageIpSubnet}
                 -
                   type: vlan
-                  vlan_id: 40
+                  vlan_id: {get_param: StorageMgmtNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageMgmtIpSubnet}
