--- a/network/config/single-nic-vlans/cinder-storage.yaml
+++ b/network/config/single-nic-vlans/cinder-storage.yaml
@@ -25,6 +25,18 @@ parameters:
     default: ''
     description: IP address/subnet on the tenant network
     type: string
+  InternalApiNetworkVlanID:
+    default: 20
+    description: Vlan ID for the internal_api network traffic.
+    type: number
+  StorageNetworkVlanID:
+    default: 30
+    description: Vlan ID for the storage network traffic.
+    type: number
+  StorageMgmtNetworkVlanID:
+    default: 40
+    description: Vlan ID for the storage mgmt network traffic.
+    type: number
 
 resources:
   OsNetConfigImpl:
@@ -46,19 +58,19 @@ resources:
                   primary: true
                 -
                   type: vlan
-                  vlan_id: 20
+                  vlan_id: {get_param: InternalApiNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: InternalApiIpSubnet}
                 -
                   type: vlan
-                  vlan_id: 30
+                  vlan_id: {get_param: StorageNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageIpSubnet}
                 -
                   type: vlan
-                  vlan_id: 40
+                  vlan_id: {get_param: StorageMgmtNetworkVlanID}
                   addresses:
                   -
                     ip_netmask: {get_param: StorageMgmtIpSubnet}
