Isolate network traffic for Nova VNC proxy
This patch makes it possible to configure the isolated network
for the Nova vnc proxy client.

Change-Id: I462dfaea94e5fe9cb260ba91a42433a250f07984

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -512,6 +512,7 @@ parameters:
       HeatApiNetwork: internal_api
       NovaApiNetwork: internal_api
       NovaMetadataNetwork: internal_api
+      NovaVncProxyNetwork: internal_api
       SwiftMgmtNetwork: storage_mgmt
       SwiftProxyNetwork: storage
       HorizonNetwork: internal_api
