--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -338,8 +338,6 @@ resources:
               raw_data: {get_file: hieradata/ceph.yaml}
             compute:
               raw_data: {get_file: hieradata/compute.yaml}
-              oac_data:
-                nova::compute::vncserver_proxyclient_address: local-ipv4
               mapped_data:
                 nova::debug: {get_input: debug}
                 nova::rabbit_userid: {get_input: rabbit_username}
@@ -352,6 +350,7 @@ resources:
                 nova::compute::vncproxy_host: {get_input: nova_public_ip}
                 nova_enable_rbd_backend: {get_input: nova_enable_rbd_backend}
                 nova_password: {get_input: nova_password}
+                nova::compute::vncserver_proxyclient_address: {get_input: nova_vnc_proxyclient_address}
                 ceilometer::debug: {get_input: debug}
                 ceilometer::rabbit_userid: {get_input: rabbit_username}
                 ceilometer::rabbit_password: {get_input: rabbit_password}
@@ -406,6 +405,7 @@ resources:
         nova_api_host: {get_param: NovaApiHost}
         nova_password: {get_param: NovaPassword}
         nova_enable_rbd_backend: {get_param: NovaEnableRbdBackend}
+        nova_vnc_proxyclient_address: {get_attr: [NetIpMap, net_ip_map, {get_param: [ServiceNetMap, NovaVncProxyNetwork]}]}
         ceilometer_metering_secret: {get_param: CeilometerMeteringSecret}
         ceilometer_password: {get_param: CeilometerPassword}
         ceilometer_compute_agent: {get_param: CeilometerComputeAgent}
