Rename ServiceNetMap: NeutronLocalIp
This patch renames the NeutronLocalIp option to be called
NeutronTenantNetwork. This is more consistent with
all of the other ServiceNetMap settings which end in
'Network' and initial end user feedback found the
old name a bit cryptic as well.

This is the network for neutron tenant traffic so lets
just name it that.

Change-Id: Id49afe75c372887453413c092190a5775aa3e1ee

--- a/overcloud-without-mergepy.yaml
+++ b/overcloud-without-mergepy.yaml
@@ -499,7 +499,7 @@ parameters:
       - custom_constraint: nova.flavor
   ServiceNetMap:
     default:
-      NeutronLocalIp: tenant
+      NeutronTenantNetwork: tenant
       CeilometerApiNetwork: internal_api
       MongoDbNetwork: internal_api
       CinderApiNetwork: internal_api
