Remove external bridge from Compute nodes
This change modifies overcloud-resource-registry-puppet.yaml to
use net-config-noop.yaml as the default os-net-config template
for compute nodes. The current default of net-config-bridge.yaml
will set up a br-ex on the compute nodes. Since we are not using
DVR that is not needed.

Change-Id: I4e149a4f5a6d19e94e8c0245f52677f92f22d3ec

--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -2,7 +2,7 @@ resource_registry:
   OS::TripleO::BlockStorage: puppet/cinder-storage-puppet.yaml
   OS::TripleO::BlockStorage::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::Compute: puppet/compute-puppet.yaml
-  OS::TripleO::Compute::Net::SoftwareConfig: net-config-bridge.yaml
+  OS::TripleO::Compute::Net::SoftwareConfig: net-config-noop.yaml
   OS::TripleO::SoftwareDeployment: OS::Heat::StructuredDeployment
   OS::TripleO::Controller: puppet/controller-puppet.yaml
   OS::TripleO::Controller::Net::SoftwareConfig: net-config-bridge.yaml
