Remove Redis VirtualIP from params and build it from Neutron::Port
The redis_vip should come from a Neutron Port as its cidr depends
on the Neutron Network configuration. This change adds 2 new files
and modifies 1 in the network/ports directory:

- noop.yaml - Passes through the ctlplane Controller IP (modified)
- ctlplane_vip.yaml - Creates a new VIP on the control plane
- vip.yaml - Creates a VIP on the named network (for isolated nets)

Also, changes to overcloud-without-mergepy.yaml create the
Redis Virtual IP. The standard resource registry was modified to
use noop.yaml for the new Redis VIP. The Puppet resource registry
was modified to use ctlplane_vip.yaml by default, but can be made
to use vip.yaml when network isolation is used by using an
environment file. vip.yaml will place the VIP according to the
ServiceNetMap, which can also be overridden.

We use this new VIP port definition to assign a VIP to Redis,
but follow-up patches will assign VIPs to the rest of the
services in a similar fashion.

Co-Authored-By: Dan Sneddon <dsneddon@redhat.com>

Change-Id: I2cb44ea7a057c4064d0e1999702623618ee3390c

--- a/network/ports/noop.yaml
+++ b/network/ports/noop.yaml
@@ -7,8 +7,16 @@ parameters:
   ControlPlaneIP:
     description: IP address on the control plane
     type: string
+  ControlPlaneNetwork:
+    description: Name of the control plane network
+    default: ctlplane
+    type: string
   PortName:
     description: Name of the port
+    default: ''
+    type: string
+  NetworkName:
+    description: # Here for compatability with vip.yaml
     default: ''
     type: string
   ControlPlaneSubnetCidr: # Override this via parameter_defaults
