--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -68,5 +68,8 @@ resource_registry:
   # Cinder backend config for the controller role
   OS::TripleO::Controller::CinderBackend: extraconfig/controller/noop.yaml
 
+  # Port assignments for service virtual IPs for the controller role
+  OS::TripleO::Controller::Ports::RedisVipPort: network/ports/ctlplane_vip.yaml
+
 parameter_defaults:
   EnablePackageInstall: false
