--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -61,3 +61,6 @@ resource_registry:
   OS::TripleO::BlockStorage::Ports::InternalApiPort: network/ports/noop.yaml
   OS::TripleO::BlockStorage::Ports::StoragePort: network/ports/noop.yaml
   OS::TripleO::BlockStorage::Ports::StorageMgmtPort: network/ports/noop.yaml
+
+  # Port assignments for service virtual IPs for the controller role
+  OS::TripleO::Controller::Ports::RedisVipPort: network/ports/noop.yaml
